--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ header ul{
 
 
 @media screen and (max-width:468px){
+    *{
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
     header{
         padding: 19px;
         display: flex;
@@ -26,7 +29,7 @@ header ul{
     }
     .hero h2{
         font-size: 38px;
-        line-height: 32px;
+        /* line-height: 4px; */
         margin-bottom: 20px;
     }
     .hero-left p{
@@ -47,15 +50,15 @@ header ul{
     .section1{
         padding: 19px;
         display: flex;
+        gap: 30px;
         flex-direction: column;
         align-items: center;
     }
     .line{
         border-bottom: 2px solid black;
-        margin-top: 14px;
         margin-bottom: 10px;
         position: relative;
-        /* left: 0px; */
+        top: -10px;
         width: 50px;
     }
 
@@ -63,14 +66,114 @@ header ul{
         width: 333px;
         margin-bottom: 40px;
     }
+    .boxes{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 12px;
+    }
     .box1{
-        width: 270px;
-        height: 230px;
-        border: 2px solid black;
+        width: 174px;
+        height: 238px;
+        outline: none;
+        /* border: 2px solid black; */
         border-radius: 7px;
-        padding: 10px;
+        padding: 20px;
+        margin-bottom: 24px;
+        box-shadow: 4px 4px 13px grey;
+    }
+    .box1:hover{
+        background-color: white;
+        opacity: 0.3;
+        transition: all;
+        transition-duration: 0.2s;
+        border: 1px solid black;
+    }
+    .box1 img{
+        margin-bottom: 10px;
+    }
+    .box1 p{
+        text-align: left;
+        width: 151px;
+        color: hsla(0, 0%, 0%, 0.459);
+    }
+    .box1 h3{
+        margin-bottom: 10px;
+    }
+    .learn{
+        padding: 10px 19px;
+        border-radius: 18px;
+        border: 1px solid cornflowerblue;
+        background: none;
+        margin-top: -27px;
     }
 
+    .section2{
+        margin-top: 50px;
+        padding: 19px;
+        margin-bottom: 20px;
+    }
+    .section2-left p{
+        margin-bottom: 20px ;
+    }
+    .section2 h2{
+        margin-bottom: 20px;
+    }
+    .customer-box{
+        display: flex;
+        /* padding: 49px; */
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 370px;
+        height: 220px;
+        margin-top: 90px;
+        margin-bottom: 50px;
+    }
+    .custom{
+        display: flex;
+        flex-direction: column;
+        width: 340px;
+        height: 280px;
+        padding: 20px;
+        /* border: 1px solid black; */
+        border-radius: 10px;
+        box-shadow: 2px 5px 8px grey ;
+        text-align: center;
+        transition: all;
+        transition: 0.6s;
+
+    }
+    .custom:hover{
+        p.line2{
+            color: white;
+        }
+        background-color: #458ff6;
+        color: white;
+    }
+
+    .line2{
+        border-bottom: 2px solid black;
+        margin-bottom: 23px;
+        position: relative;
+        top: 14px;
+        left: 120px;
+        width: 50px;
+    }
+
+    .customer{
+       display: flex;
+       align-items: center;
+    }
+    .pix img{
+        width: 59px;
+        border-radius: 100%;
+    }
+    .text{
+        padding: 5px;
+    }
+    .saying{
+        width: 300px;
+    }
 
 
 
